refactor: add ide integration guide
